--- a/bootstrap-3.3.6-dist/haircut.html
+++ b/bootstrap-3.3.6-dist/haircut.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,11 +12,11 @@
 </head>
 
 <body>
-   <div class="navbar-wrapper">
+ <div class="navbar-wrapper">
     <div class="container">
         <nav class="navbar navbar-inverse navbar-static-top">
             <div class="navbar-header">
-                <a class="navbar-brand" href="index.html"><img src='Images/logo4.jpg' style="height:38px; width=39px;">Cut Right Barbershop</a>
+                <a class="navbar-brand" href="index.html"><img src='Images/logo3.jpg' style="height:38px; width=39px;">Fantasy Barbershop</a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -46,12 +47,13 @@
                     <div class="col-sm-6" id="slider-thumbs">
                         <ul class="list-unstyled">
                             <li class="col-sm-3">
-                                <a class="thumbnail" id="carousel-selector-0">
-                                    <img src="Images/cut0.jpg">
+                              <a class="thumbnail" id="carousel-selector-0">
+                                    <img src="Images/cut0.jpg"/>
                                 </a>
                             </li>
                             <li class="col-sm-3">
-                                <a class="thumbnail" id="carousel-selector-1"><img src="Images/cut1.jpg"></a>
+                           <a class="thumbnail" id="carousel-selector-1"><img src="Images/cut1.jpg"/></a>
+
                             </li>
                             <li class="col-sm-3">
                                 <a class="thumbnail" id="carousel-selector-2"><img src="Images/cut2.jpg"></a>
@@ -108,16 +110,16 @@
                                 <a class="thumbnail" id="carousel-selector-19"><img src="Images/cut19.jpg"></a>
                             </li>
                             <li class="col-sm-3">
-                                <a class="thumbnail" id="carousel-selector-20"><img src="Images/cut19.jpg"></a>
+                                <a class="thumbnail" id="carousel-selector-20"><img src="Images/cut20.jpg"></a>
                             </li>
                             <li class="col-sm-3">
-                                <a class="thumbnail" id="carousel-selector-21"><img src="Images/cut19.jpg"></a>
+                                <a class="thumbnail" id="carousel-selector-21"><img src="Images/cut21.jpg"></a>
                             </li>
                             <li class="col-sm-3">
-                                <a class="thumbnail" id="carousel-selector-22"><img src="Images/cut19.jpg"></a>
+                                <a class="thumbnail" id="carousel-selector-22"><img src="Images/cut22.jpg"></a>
                             </li>
                             <li class="col-sm-3">
-                                <a class="thumbnail" id="carousel-selector-23"><img src="Images/cut19.jpg"></a>
+                                <a class="thumbnail" id="carousel-selector-23"><img src="Images/cut23.jpg"></a>
                             </li>
 
                         </ul>
@@ -180,7 +182,20 @@
 
                                                                                                                         <div class="item" data-slide-number="19">
                                                                                                                             <img src="Images/cut19.jpg"></div>
-                                                                                                                        </div>
+
+
+                                                                                                                        <div class="item" data-slide-number="20">
+                                                                                                                            <img src="Images/cut20.jpg"></div>
+
+                                                                                                                        <div class="item" data-slide-number="21">
+                                                                                                                            <img src="Images/cut21.jpg"></div>
+
+                                                                                                                        <div class="item" data-slide-number="22">
+                                                                                                                            <img src="Images/cut22.jpg"></div>
+
+                                                                                                                        <div class="item" data-slide-number="23">
+                                                                                                                            <img src="Images/cut23.jpg"></div>
+
 
 
                                                                                                                         <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
@@ -197,25 +212,29 @@
                                                                                                 </div>
 
                                                                                             </div>
-                                                                                        </div>
+                                                                                            </div>
+                                                                                            </div>
+
+
                                                                                         <hr class="featurette-divider">
                                                                                         <footer class="footer navbar-default">
-                                                                                            <div class="row" "container">
+                                                                                            <div class="row">
                                                                                                 <a href="[full link to your Facebook page]">
                                                                                                     <img class="img-circle" title="Yahoo" alt="Yahoo Email" src="Images/yahoologo.png" width="90" height="90" />
                                                                                                 </a>
                                                                                                 <a href="[full link to your Facebook page]">
-                                                                                                <img class="img-circle" title="Facebook" alt="Facebook" src="Images/facebooklogo2.png" width="90" height="90" />
+                                                                                                    <img class="img-circle" title="Facebook" alt="Facebook" src="Images/facebooklogo2.png" width="90" height="90" />
                                                                                                 </a>
                                                                                                 <a href="http://www.yelp.com/biz/cut-right-barber-shop-san-bruno">
                                                                                                     <img class="img-circle" title="Yelp" alt="Yelp" src="Images/yelplogo.png" width="90" height="90" />
                                                                                                     <a href="[full link to your Instagram]">
                                                                                                         <img class="img-circle" title="Instagram" alt="RSS" src="Images/instagramlogo.png" width="90" height="90" />
                                                                                                     </a>
-                                                                                                    <p class="copy">&copy; 2016 Cut Right Barbershop and Angel Inc.</p>
+                                                                                                    <p class="copy">&copy; 2016 Fantasy Barbershop and Angel Inc.</p>
                                                                                                 </div>
                                                                                             </footer>
-                                                                                        </div>
+                                                                                            </div>
+
 
                                                                                         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
                                                                                         <script src="js/bootstrap.js"></script>
