--- a/bootstrap-3.3.6-dist/services.html
+++ b/bootstrap-3.3.6-dist/services.html
@@ -21,7 +21,7 @@
 		<div class="container">
 			<nav class="navbar navbar-inverse navbar-static-top">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src='Images/logo4.jpg' style="height:38px; width=39px;">Cut Right Barbershop</a>
+						<a class="navbar-brand" href="index.html"><img src='Images/logo3.jpg' style="height:38px; width=39px;">Fantasy Barbershop</a>
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
 							<span class="sr-only">Toggle navigation</span>
 							<span class="icon-bar"></span>
@@ -103,7 +103,7 @@
 					<a href="[full link to your Instagram]">
 						<img class="img-circle" title="Instagram" alt="RSS" src="Images/instagramlogo.png" width="90" height="90" />
 					</a>
-					<p class="copy">&copy; 2016 Cut Right Barbershop and Angel Inc.</p>
+					<p class="copy">&copy; 2016 Fantasy Barbershop and Angel Inc.</p>
 				</div>
 			</footer>
 
