updated footer, and website content.

--- a/bootstrap-3.3.6-dist/barbers.html
+++ b/bootstrap-3.3.6-dist/barbers.html
@@ -208,7 +208,7 @@
                                                                                         <br />
                                                                                         <p>(650)467-7373</p>
                                                                                         <div class="fades">
-                                                                                        <p>Owner of cut right barbershop, i work monday-friday, i been a barber for over 10 years and its my passion and something i enjoy doing every day of my life.</p>
+                                                                                        <p>Hi everyone my name is Merlin Perez and i been cutting hair for over 15 years and its what i love, i wouldn't change it for the world.</p>
                                                                                         </div>
                                                                                         <div class="btn-group">
                                                                                             <button type="button" class="btn btn-primary">
@@ -234,16 +234,16 @@
                                                                     <footer class="footer navbar-default">
                                                                         <div class="row">
                                                                             <a href="[full link to your Facebook page]">
-                                                                                <img class="img-circle" title="Yahoo" alt="Yahoo Email" src="Images/yahoologo.png" width="90" height="90" />
+                                                                                <img class="img-circle" title="Yahoo" alt="Yahoo Email" src="Images/yahoologo.png" width="80" height="80" />
                                                                             </a>
                                                                             <a href="[full link to your Facebook page]">
-                                                                                <img class="img-circle" title="Facebook" alt="Facebook" src="Images/facebooklogo2.png" width="90" height="90" />
+                                                                                <img class="img-circle" title="Facebook" alt="Facebook" src="Images/facebooklogo2.png" width="80" height="80" />
                                                                             </a>
                                                                             <a href="">
-                                                                                <img class="img-circle" title="Yelp" alt="Yelp" src="Images/yelplogo.png" width="90" height="90" />
+                                                                                <img class="img-circle" title="Yelp" alt="Yelp" src="Images/yelplogo.png" width="80" height="80" />
                                                                             </a>
                                                                             <a href="[full link to your Instagram]">
-                                                                                <img class="img-circle" title="Instagram" alt="RSS" src="Images/instagramlogo.png" width="90" height="90" />
+                                                                                <img class="img-circle" title="Instagram" alt="RSS" src="Images/instagramlogo.png" width="80" height="80" />
                                                                             </a>
                                                                             <p class="copy">&copy; 2016 Cut Right Barbershop and Angel Inc.</p>
                                                                         </div>
