--- a/bootstrap-3.3.6-dist/haircut.html
+++ b/bootstrap-3.3.6-dist/haircut.html
@@ -7,6 +7,7 @@
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link href="application.js" rel="stylesheet">
 </style>
 
 </head>
@@ -220,15 +221,15 @@
                                                                                         <footer class="footer navbar-default">
                                                                                             <div class="row">
                                                                                                 <a href="[full link to your Facebook page]">
-                                                                                                    <img class="img-circle" title="Yahoo" alt="Yahoo Email" src="Images/yahoologo.png" width="90" height="90" />
+                                                                                                    <img class="img-circle" title="Yahoo" alt="Yahoo Email" src="Images/yahoologo.png" width="80" height="80" />
                                                                                                 </a>
                                                                                                 <a href="[full link to your Facebook page]">
-                                                                                                    <img class="img-circle" title="Facebook" alt="Facebook" src="Images/facebooklogo2.png" width="90" height="90" />
+                                                                                                    <img class="img-circle" title="Facebook" alt="Facebook" src="Images/facebooklogo2.png" width="80" height="80" />
                                                                                                 </a>
                                                                                                 <a href="http://www.yelp.com/biz/cut-right-barber-shop-san-bruno">
-                                                                                                    <img class="img-circle" title="Yelp" alt="Yelp" src="Images/yelplogo.png" width="90" height="90" />
+                                                                                                    <img class="img-circle" title="Yelp" alt="Yelp" src="Images/yelplogo.png" width="80" height="80" />
                                                                                                     <a href="[full link to your Instagram]">
-                                                                                                        <img class="img-circle" title="Instagram" alt="RSS" src="Images/instagramlogo.png" width="90" height="90" />
+                                                                                                        <img class="img-circle" title="Instagram" alt="RSS" src="Images/instagramlogo.png" width="80" height="80" />
                                                                                                     </a>
                                                                                                     <p class="copy">&copy; 2016 Fantasy Barbershop and Angel Inc.</p>
                                                                                                 </div>
