--- a/bootstrap-3.3.6-dist/index.html
+++ b/bootstrap-3.3.6-dist/index.html
@@ -14,7 +14,7 @@
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link rel="stylesheet" href="main.css">
 
-	<link href="carousel.css" rel="stylesheet">
+	<link href="application.js" rel="stylesheet">
 </head>
 <body>
 
@@ -48,7 +48,7 @@
 				</div>
 			</nav>
 			</div>
-
+      </div>
 			<div id="myCarousel" class="carousel slide" data-ride="carousel">
 
 				<ol class="carousel-indicators">
@@ -131,7 +131,7 @@
 					<div class="featurette">
 
 						<h2 class="featurette-heading"><strong>Fantasy Barbershop</strong></h2>
-						<p class="lead"><strong><span class="text-muted">2620 Westmoreland Avenue, San Francisco, CA 94066 Tues-Sat 10am-6pm (619) 677-4733</span></strong></p>
+						<p class="lead"><strong><span class="text-muted">2620 Westmoreland Avenue, San Francisco CA 94066 </br>Tuesday-Saturday 10:00am-6:00pm (619) 677-4733</span></strong></p>
 						<p class="para">We specialize in Fades, tapers, mohawks, and straight razor shaves. We work mostly by appointments and we have a family friendly shop so feel free to stop by anytime.(we serve all ages).</p>
 					</div>
 				</div>
@@ -149,24 +149,29 @@
 				</div>
 			</div>
 			<hr class="featurette-divider">
+
+
 			<footer class="footer navbar-default">
-				<div class="row">
-					<a href="[full link to your Facebook page]">
-						<img class="img-circle" title="Yahoo" alt="Yahoo Email" src="Images/yahoologo.png" width="90" height="90" />
-					</a>
-					<a href="[full link to your Facebook page]">
-						<img class="img-circle" title="Facebook" alt="Facebook" src="Images/facebooklogo2.png" width="90" height="90" />
-					</a>
-					<a href="http://www.yelp.com/biz/cut-right-barber-shop-san-bruno">
-						<img class="img-circle" title="Yelp" alt="Yelp" src="Images/yelplogo.png" width="90" height="90" />
+			<div class="row">
+        <a href="[full link to your Facebook page]">
+					<img class="img-circle" title="Yahoo" alt="Yahoo Email" src="Images/yahoologo.png" width="80" height="80" />
+				</a>
+				<a href="[full link to your Facebook page]">
+					<img class="img-circle" title="Facebook" alt="Facebook" src="Images/facebooklogo2.png" width="80" height="80" />
+				</a>
+				<a href="#">
+					<img class="img-circle" title="Yelp" alt="Yelp" src="Images/yelplogo.png" width="80" height="80" />
 					</a>
 					<a href="[full link to your Instagram]">
-						<img class="img-circle" title="Instagram" alt="RSS" src="Images/instagramlogo.png" width="90" height="90" />
+						<img class="img-circle" title="Instagram" alt="RSS" src="Images/instagramlogo.png" width="80" height="80" />
 					</a>
 					<p class="copy">&copy; 2016 Fantasy Barbershop and Angel Inc.</p>
 				</div>
 			</footer>
+
+
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 			<script src="js/bootstrap.js"></script>
-		</body>
+
+			</body>
 		</html>
