Updated barbers.html and main.css

--- a/bootstrap-3.3.6-dist/barbers.html
+++ b/bootstrap-3.3.6-dist/barbers.html
@@ -38,16 +38,14 @@
             </div>
         </div>
 
+
         <h1 class="barbers-title">Fantasy Barbers</h1>
 
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-sm-10 col-md-12">
+                <div class="col-xs-8 col-sm-10 col-md-12">
 
-                            <div class="col-xs-12 col-sm-10 col-md-12">
-                                <img src="Images/vick.jpg" alt="Barber Vick" class="img-rounded img-responsive" />
-                            </div>
-                            <div class="col-xs-12 col-sm-10 col-md-12">
+                                <img src="Images/vick.jpg" alt="Barber Vick" class="img-rounded img-responsive"/>
 
                                 <h2><strong>Victor Gonzalez</strong></h2>
 
@@ -75,16 +73,14 @@
                                         </div>
                             </div>
                         </div>
-                    </div>
+
                     <hr class="featurette-divider">
                     <div class="container">
                         <div class="row">
-                            <div class="col-xs-12 col-sm-10 col-md-12">
+                            <div class="col-xs-8 col-sm-10 col-md-12">
 
-                                        <div class="col-sm-10 col-md-12">
                                             <img src="Images/edson.jpg" alt="Barber Edson" class="img-rounded img-responsive" />
-                                        </div>
-                                        <div class="col-xs-12 col-sm-10 col-md-12">
+
                                             <h2>
                                               <strong>  Edson Pumacayo</strong></h2>
                                                 <small><cite title="San Francisco, USA">Redwood City, CA <i class="glyphicon glyphicon-map-marker">
@@ -113,18 +109,14 @@
                                                 </div>
 
                                         </div>
-                                    </div>
-                                </div>
+
                                 <hr class="featurette-divider">
                                 <div class="container">
                                     <div class="row">
-                                        <div class="col-xs-12 col-sm-10 col-md-12">
+                                        <div class="col-xs-8 col-sm-10 col-md-12">
 
-
-                                                    <div class="col-sm-10 col-md-12">
                                                         <img src="Images/pablo.jpg" alt="Barber Pablo" class="img-rounded img-responsive" />
-                                                    </div>
-                                                    <div class="col-xs-12 col-sm-10 col-md-12">
+
                                                         <h2>
                                                             <strong>Pablo Gonzalez</strong></h2>
                                                             <small><cite title="San Francisco, USA">Oakland, CA <i class="glyphicon glyphicon-map-marker">
@@ -153,16 +145,14 @@
 
                                                     </div>
                                                 </div>
-                                            </div>
+
                                             <hr class="featurette-divider">
                                             <div class="container">
                                                 <div class="row">
-                                                    <div class="col-xs-12 col-sm-10 col-md-12">
+                                                    <div class="col-xs-8 col-sm-10 col-md-12">
 
-                                                                <div class="col-sm-10 col-md-12">
                                                                     <img src="Images/willie.jpg" alt="Barber Willie" class="img-rounded img-responsive" />
-                                                                </div>
-                                                                <div class="col-xs-12 col-sm-10 col-md-12">
+
                                                                     <h2>
                                                                         <strong>Willie Suarez</strong></h2>
                                                                         <small><cite title="San Francisco, USA">San Jose, CA <i class="glyphicon glyphicon-map-marker">
@@ -189,16 +179,14 @@
                                                                             </div>
                                                                 </div>
                                                             </div>
-                                                        </div>
-                                                        <hr class="featurette-divider">s
+
+                                                        <hr class="featurette-divider">
                                                         <div class="container">
                                                             <div class="row">
-                                                                <div class="col-xs-12 col-sm-10 col-md-12">
+                                                                <div class="col-xs-8 col-sm-10 col-md-12">
 
-                                                                            <div class="col-sm-10 col-md-12">
                                                                                 <img src="Images/merlin.jpg" alt="Barber Merlin" class="img-rounded img-responsive" />
-                                                                            </div>
-                                                                            <div class="col-xs-12 col-sm-10 col-md-12">
+
                                                                                 <h2>
                                                                                    <strong> Merlin Perez</strong></h2>
                                                                                     <small><cite title="San Francisco, USA">San Bruno, CA <i class="glyphicon glyphicon-map-marker">
@@ -226,8 +214,6 @@
                                                                                     </div>
 
                                                                             </div>
-                                                                        </div>
-                                                                    </div>
 
 
                                                                     <hr class="featurette-divider">
