Updated barbers.html and main.css and index.html

--- a/bootstrap-3.3.6-dist/index.html
+++ b/bootstrap-3.3.6-dist/index.html
@@ -20,7 +20,7 @@
 
 	<div class="navbar-wrapper">
 		<div class="container">
-			<nav class="navbar navbar-inverse navbar-static-top" role='navigation' >
+			<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
 				<div class="navbar-header">
 					<a class="navbar-brand" href="index.html"><img src='Images/logo3.jpg' style="height:38px; width=39px;">Fantasy Barbershop</a>
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded='false' aria-controls='navbar'>
@@ -48,7 +48,9 @@
 				</div>
 			</nav>
 			</div>
-      </div>
+
+
+
 			<div id="myCarousel" class="carousel slide" data-ride="carousel">
 
 				<ol class="carousel-indicators">
@@ -124,18 +126,19 @@
 						<p>Check out everything we do here at <span class="text-muted"><strong>Fantasy Barbershop</strong></span> we have had clients from all over the world stop by our famous Fantasy Shop! but don't take my word for it find out through our gallery.</p>
 						<p><a class="btn btn-default" href="services.html" role="button">Services </a></p>
 					</div>
+
 				</div>
+
 				<hr class="featurette-divider">
 				<div class="col-md-offset-1 col-md-10">
 
-					<div class="featurette">
 
 						<h2 class="featurette-heading"><strong>Fantasy Barbershop</strong></h2>
 						<p class="lead"><strong><span class="text-muted">2620 Westmoreland Avenue, San Francisco CA 94066 </br>Tuesday-Saturday 10:00 am - 6:00 pm (619) 677-4733</span></strong></p>
 						<p class="para">We specialize in Fades, tapers, mohawks, and straight razor shaves. We work mostly by appointments and we have a family friendly shop so feel free to stop by anytime.(we serve all ages).</p>
-					</div>
-				</div>
-			</div>
+						</div>
+</div>
+<div class="row">
 			<div style="height: 300px; margin-top:60px;">
 				<div class="cube-wrap vertical">
 					<div class="cube depth">
@@ -148,11 +151,13 @@
 					</div>
 				</div>
 			</div>
+			</div>
+
 			<hr class="featurette-divider">
 
 
 			<footer class="footer navbar-default">
-			<div class="row">
+<div class="row">
         <a href="[full link to your Facebook page]">
 					<img class="img-circle" title="Yahoo" alt="Yahoo Email" src="Images/yahoologo.png" width="80" height="80" />
 				</a>
@@ -166,7 +171,7 @@
 						<img class="img-circle" title="Instagram" alt="RSS" src="Images/instagramlogo.png" width="80" height="80" />
 					</a>
 					<p class="copy">&copy; 2016 Fantasy Barbershop and Angel Inc.</p>
-				</div>
+</div>
 			</footer>
 
 
