Updated barbers.html navbar

--- a/bootstrap-3.3.6-dist/barbers.html
+++ b/bootstrap-3.3.6-dist/barbers.html
@@ -12,32 +12,34 @@
 
     <div class="navbar-wrapper">
         <div class="container">
-            <nav class="navbar navbar-inverse navbar-static-top">
+            <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="index.html"><img src='Images/logo3.jpg' style="height:38px; width=39px;">Fantasy Barbershop</a>
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded='false' aria-controls='navbar'>
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
                 </div>
-                <div class="navbar-collapse collapse" id="navbar">
-                    <ul class="nav navbar-nav navbar-right">
-                      <li><a href="barbers.html">Barbers</a></li>
-                      <li><a href="services.html">Services</a></li>
-                      <li><a href="haircut.html">Haircuts</a></li>
-                      <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Facebook</a></li>
-                            <li><a href="#">Instagram</a></li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </div>
 
+                <div class="collapse navbar-collapse" id="navbar">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class='active'><a href="barbers.html">Barbers</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="haircut.html">Haircuts</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Facebook</a></li>
+                                <li><a href="#">Instagram</a></li>
+                            </ul>
+                            </li>
+                            </ul>
+                        </div>
+                </div>
+            </nav>
+            </div>
 
         <h1 class="barbers-title">Fantasy Barbers</h1>
 
