--- a/bootstrap-3.3.6-dist/barbers.html
+++ b/bootstrap-3.3.6-dist/barbers.html
@@ -45,7 +45,7 @@
 
 <div class="container">
             <div class="row">
-                <div class="col-xs-6 col-sm-10 col-md-12">
+                <div class="col-xs-6 col-sm-10">
 
                                 <img src="Images/vick.jpg" alt="Barber Vick" class="img-rounded img-responsive"/>
 
@@ -55,7 +55,7 @@
                                     <p>
                                         <i class="glyphicon glyphicon-envelope"></i> email@example.com
                                         <br />
-                                       <p>(650)467-7373</p>
+                                       <p class="number">(650)467-7373</p>
                                        <div class="fades">
                                         <p>Specialty: fades, i been a barber for over 10 years and its my passion and something i enjoy doing every day of my life. I will retire at Fanatasy Barbershop.</p>
                                         </div>
@@ -78,7 +78,7 @@
                     <hr class="featurette-divider">
 
                         <div class="row">
-                            <div class="col-xs-6 col-sm-10 col-md-12">
+                            <div class="col-xs-6 col-sm-10">
 
                                             <img src="Images/edson.jpg" alt="Barber Edson" class="img-rounded img-responsive" />
 
@@ -114,7 +114,7 @@
                                 <hr class="featurette-divider">
 
                                     <div class="row">
-                                        <div class="col-xs-6 col-sm-10 col-md-12">
+                                        <div class="col-xs-6 col-sm-10">
 
                                                         <img src="Images/pablo.jpg" alt="Barber Pablo" class="img-rounded img-responsive" />
 
@@ -149,7 +149,7 @@
 
                                             <hr class="featurette-divider">
                                                 <div class="row">
-                                                    <div class="col-xs-6 col-sm-10 col-md-12">
+                                                    <div class="col-xs-6 col-sm-10">
 
                                                                     <img src="Images/willie.jpg" alt="Barber Willie" class="img-rounded img-responsive" />
 
@@ -183,7 +183,7 @@
                                                         <hr class="featurette-divider">
 
                                                             <div class="row">
-                                                                <div class="col-xs-6 col-sm-10 col-md-12">
+                                                                <div class="col-xs-6 col-sm-10">
 
                                                                                 <img src="Images/merlin.jpg" alt="Barber Merlin" class="img-rounded img-responsive" />
 
