added mboile friendly to barbers.html

--- a/bootstrap-3.3.6-dist/barbers.html
+++ b/bootstrap-3.3.6-dist/barbers.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="description" content="">
+    <meta name="author" content="">
+
     <title>Barbers Profiles</title>
 
 
@@ -45,7 +52,7 @@
 
 <div class="container">
             <div class="row">
-                <div class="col-xs-6 col-sm-10">
+                <div class="col-md-9">
 
                                 <img src="Images/vick.jpg" alt="Barber Vick" class="img-rounded img-responsive"/>
 
@@ -78,7 +85,7 @@
                     <hr class="featurette-divider">
 
                         <div class="row">
-                            <div class="col-xs-6 col-sm-10">
+                            <div class="col-md-9">
 
                                             <img src="Images/edson.jpg" alt="Barber Edson" class="img-rounded img-responsive" />
 
@@ -114,7 +121,7 @@
                                 <hr class="featurette-divider">
 
                                     <div class="row">
-                                        <div class="col-xs-6 col-sm-10">
+                                        <div class="col-sm-9">
 
                                                         <img src="Images/pablo.jpg" alt="Barber Pablo" class="img-rounded img-responsive" />
 
@@ -149,7 +156,7 @@
 
                                             <hr class="featurette-divider">
                                                 <div class="row">
-                                                    <div class="col-xs-6 col-sm-10">
+                                                    <div class="col-sm-9">
 
                                                                     <img src="Images/willie.jpg" alt="Barber Willie" class="img-rounded img-responsive" />
 
@@ -183,7 +190,7 @@
                                                         <hr class="featurette-divider">
 
                                                             <div class="row">
-                                                                <div class="col-xs-6 col-sm-10">
+                                                                <div class="col-sm-9">
 
                                                                                 <img src="Images/merlin.jpg" alt="Barber Merlin" class="img-rounded img-responsive" />
 
