mobile friendly updates  and edited barbers content

--- a/bootstrap-3.3.6-dist/barbers.html
+++ b/bootstrap-3.3.6-dist/barbers.html
@@ -52,7 +52,7 @@
 
 <div class="container">
             <div class="row">
-                <div class="col-md-9">
+                <div class="col-md-12">
 
                                 <img src="Images/vick.jpg" alt="Barber Vick" class="img-rounded img-responsive"/>
 
@@ -62,7 +62,7 @@
                                     <p>
                                         <i class="glyphicon glyphicon-envelope"></i> email@example.com
                                         <br />
-                                       <p class="number">(650)467-7373</p>
+                                       <span class="number"><p>(650)467-7373</p></span>
                                        <div class="fades">
                                         <p>Specialty: fades, i been a barber for over 10 years and its my passion and something i enjoy doing every day of my life. I will retire at Fanatasy Barbershop.</p>
                                         </div>
@@ -81,11 +81,10 @@
                                         </div>
                             </div>
 
-
                     <hr class="featurette-divider">
 
                         <div class="row">
-                            <div class="col-md-9">
+                            <div class="col-md-12">
 
                                             <img src="Images/edson.jpg" alt="Barber Edson" class="img-rounded img-responsive" />
 
@@ -117,11 +116,10 @@
                                                 </div>
 
 
-
                                 <hr class="featurette-divider">
 
                                     <div class="row">
-                                        <div class="col-sm-9">
+                                        <div class="col-md-12">
 
                                                         <img src="Images/pablo.jpg" alt="Barber Pablo" class="img-rounded img-responsive" />
 
@@ -156,7 +154,7 @@
 
                                             <hr class="featurette-divider">
                                                 <div class="row">
-                                                    <div class="col-sm-9">
+                                                    <div class="col-md-12">
 
                                                                     <img src="Images/willie.jpg" alt="Barber Willie" class="img-rounded img-responsive" />
 
@@ -190,7 +188,7 @@
                                                         <hr class="featurette-divider">
 
                                                             <div class="row">
-                                                                <div class="col-sm-9">
+                                                                <div class="col-md-12">
 
                                                                                 <img src="Images/merlin.jpg" alt="Barber Merlin" class="img-rounded img-responsive" />
 
@@ -231,7 +229,7 @@
                                                                             <a href="[full link to your Facebook page]">
                                                                                 <img class="img-circle" title="Facebook" alt="Facebook" src="Images/facebooklogo2.png" width="80" height="80" />
                                                                             </a>
-                                                                            <a href="">
+                                                                            <a href="#">
                                                                                 <img class="img-circle" title="Yelp" alt="Yelp" src="Images/yelplogo.png" width="80" height="80" />
                                                                             </a>
                                                                             <a href="[full link to your Instagram]">
