--- a/bootstrap-3.3.6-dist/haircut.html
+++ b/bootstrap-3.3.6-dist/haircut.html
@@ -232,7 +232,7 @@
                                                                                                 <a href="[full link to your Facebook page]">
                                                                                                     <img class="img-circle" title="Facebook" alt="Facebook" src="Images/facebooklogo2.png" width="80" height="80" />
                                                                                                 </a>
-                                                                                                <a href="http://www.yelp.com/biz/cut-right-barber-shop-san-bruno">
+                                                                                                <a href="#">
                                                                                                     <img class="img-circle" title="Yelp" alt="Yelp" src="Images/yelplogo.png" width="80" height="80" />
                                                                                                     <a href="[full link to your Instagram]">
                                                                                                         <img class="img-circle" title="Instagram" alt="RSS" src="Images/instagramlogo.png" width="80" height="80" />
